XIVY-15022 Fix overflow

--- a/packages/variable-editor/src/components/variables/master/VariablesMasterContent.css
+++ b/packages/variable-editor/src/components/variables/master/VariablesMasterContent.css
@@ -4,6 +4,7 @@
 
 .master-content-container {
   height: 100%;
+  overflow: auto;
 }
 
 .master-content {
